# rag-fastApi

./: README.md  docker-compose.yml
rag-document-manager-ms/: pyproject.toml  run.bat
rag-document-manager-ms/app/: main.py
rag-document-manager-ms/app/api/endpoints/: documents.py  schemas.py
rag-document-manager-ms/app/core/: config.py
rag-document-manager-ms/app/core/dependencies/: service_dep.py
rag-document-manager-ms/app/services/: document_loader.py  document_service.py  rag_processor.py
rag-document-manager-ms/tests/api/endpoints/: test_documents.py
rag-ingestion-ms/: Dockerfile  pyproject.toml
rag-ingestion-ms/app/api/endpoints/: documents.py  schemas.py
rag-ingestion-ms/app/api/endpoints/dependencies/: validation.py
rag-ingestion-ms/app/core/: config.py
rag-ingestion-ms/app/services/: document_parser.py  rag_processor.py
rag-query-ms/: pyproject.toml
rag-query-ms/app/: main.py
rag-query-ms/app/api/endpoints/: query.py  schemas.py
rag-query-ms/app/core/: config.py  dependencies.py  logging_config.py
rag-query-ms/app/services/: graph_definition.py  rag_chain.py  rag_service.py
