[project]
name = "rag-document-manager-ms"
version = "0.1.0"
description = "A microservice to manage documents."
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-multipart",
    "loguru",
    "gunicorn",
    "langchain",
    "langchain-community",
    "pypdf",
    "unstructured[pdf,docx,epub,txt]",
    "chromadb-client",
    "tiktoken",
    "langchain-text-splitters>=0.3.9",
    "langchain-huggingface>=0.3.1",
    "pypandoc-binary>=1.15",
    "langchain-chroma>=0.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
]
