[project]
name = "document-parser-ms"
version = "0.1.0"
description = "A microservice to parse uploaded documents and return snippets."
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-multipart",
    "loguru",
    "gunicorn",
    "langchain",
    "langchain-community",
    "pypdf",
    "unstructured[pdf,docx,epub,txt]",
    "chromadb-client",
    "tiktoken",
    "langchain-text-splitters>=0.3.9",
    "langchain-huggingface>=0.3.1",
    "pypandoc-binary>=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]

[tool.uv.sources]
pypi = { url = "https://pypi.org/simple" }
